...
        imageView.image = step.image
        textLabel.text = step.question
        counterLabel.text = step.questionNumber
    }
    
    func show(quiz result: QuizResultsViewModel) {
        let alertModel = AlertModel(id: "GameResult",
                                    title: result.title,
                                    message: result.text,
                                    buttonText: result.buttonText) {[weak self] in
            guard let self = self else {return}
            
            presenter.restartGame()
...
